--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,18 @@
   <!--  <app-container></app-container>-->
   <router-outlet></router-outlet>
   <app-footer></app-footer>
+  <div class="">
+    <div class="zalo-action">
+      <div class="fill-action"></div>
+      <a class="action" href="https://zalo.me/0935850076">
+        <img class="img-zalo" src="./content/images/zalo_home.png" alt="" />
+      </a>
+    </div>
+    <div class="phone-action">
+      <div class="fill-action"></div>
+      <a class="action" href="tel:0935850076">
+        <img class="img-phone" src="./content/images/phone.png" alt="" />
+      </a>
+    </div>
+  </div>
 </div>
