--- a/src/app/bang-gia-thue-xe/bang-gia-thue-xe.component.scss
+++ b/src/app/bang-gia-thue-xe/bang-gia-thue-xe.component.scss
@@ -1,5 +1,5 @@
 .desc {
-  margin-top: 24px;
+  margin-top: 56px;
   .title {
     display: flex;
     flex-direction: column;
@@ -64,7 +64,6 @@
 }
 .price-list {
   margin-top: 24px;
-  margin-bottom: 20px;
   .price-item {
     padding: 24px;
     background: #ffffff;
@@ -140,6 +139,15 @@
         }
         .phone-number {
           font-weight: 500;
+        }
+      }
+    }
+    &.price-item-mobile {
+      .header {
+        .destination {
+          .text {
+            font-size: 14px;
+          }
         }
       }
     }
