--- a/src/app/gioi-thieu/gioi-thieu.component.html
+++ b/src/app/gioi-thieu/gioi-thieu.component.html
@@ -1,4 +1,4 @@
-<div class="gioi-thieu container">
+<div class="gioi-thieu container" [class.gioi-thieu-mobile]="mobileView">
   <div class="note">
     <div class="detail">
       <span style="margin-bottom: 20px">
