--- a/src/app/dat-xe/dat-xe.component.scss
+++ b/src/app/dat-xe/dat-xe.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 56px;
     .order-left {
       flex: 1;
       .title {
@@ -24,6 +25,7 @@
         border: 2px solid #ffd43b;
         border-radius: 20px;
         color: #ffd43b;
+        text-decoration: none;
         .icon {
           margin-right: 10px;
         }
@@ -37,6 +39,20 @@
     .order-right {
       flex: 1;
       padding: 20px;
+    }
+  }
+  &.order-group-mobile {
+    .order {
+      display: flex;
+      flex-direction: column;
+      padding-top: 30px;
+      padding-bottom: 24px;
+      .order-left {
+        padding-bottom: 24px;
+      }
+      .order-right {
+        padding: unset;
+      }
     }
   }
 }
