--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!mobileView" class="navbar container">
   <div class="logo">
-    <img src="./content/images/logo.jpeg" alt="" />
+    <img src="./content/images/logo.png" alt="" />
   </div>
   <div class="navbar-main">
     <div class="navbar-item" routerLink="/home" [routerLinkActive]="'active'">
@@ -32,7 +32,7 @@
     <i class="fa-solid fa-bars"></i>
   </div>
   <div class="logo">
-    <img src="./content/images/logo.jpeg" alt="" />
+    <img src="./content/images/logo.png" alt="" />
   </div>
   <div class="right"></div>
 </div>
