--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,12 +1,14 @@
 :host {
   padding: 0;
-  //position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 56px;
   z-index: 500;
-  margin-bottom: 56px;
+  //margin-bottom: 56px;
+  z-index: 999;
+  background-color: white;
 }
 .navbar {
   display: flex;
@@ -44,6 +46,8 @@
   }
 }
 .navbar-mobile {
+  border-bottom: 1px solid #dfe1e6;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -57,8 +61,8 @@
     align-items: center;
     justify-content: center;
     img {
-      width: 70px;
-      height: 70px;
+      width: 56px;
+      height: 56px;
     }
   }
   .right {
@@ -71,6 +75,7 @@
   left: 0;
   z-index: 1000;
   width: 100%;
+  height: 100vh;
   transform: translateX(-100%);
   display: flex;
   flex-direction: row;
@@ -86,6 +91,11 @@
       &:hover {
         background-color: #757575;
         color: white;
+      }
+      &.active {
+        color: #ed1c24;
+        border-bottom: 1px solid #dfe1e6;
+        padding-bottom: 5px;
       }
     }
   }
