--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-  <app-navbar></app-navbar>
+<div id="app-wrapper" style="margin-top: 56px;" class="wrapper">
+  <app-navbar id="app-navbar"></app-navbar>
   <!--  <app-container></app-container>-->
   <router-outlet></router-outlet>
   <app-footer></app-footer>
