--- a/src/app/gioi-thieu/gioi-thieu.component.scss
+++ b/src/app/gioi-thieu/gioi-thieu.component.scss
@@ -3,7 +3,7 @@
   .note {
     display: flex;
     flex-direction: row;
-    margin-top: 56px;
+    //margin-top: 56px;
     margin-bottom: 20px;
     .detail {
       flex: 1;
