add QR code kakaotalk & whatsapp

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -58,21 +58,21 @@
           <span class="phone-number">0935 850 076</span>
         </div>
         <div class="">
-          <span>
+          <a href="https://zalo.me/0935850076">
             <img
               style="border-radius: 18px; margin-right: 10px"
               src="./content/images/zalo.png"
               alt=""
             />
-          </span>
-          <span>
+          </a>
+          <span (click)="openModal('kakaotalk')">
             <img
               style="border-radius: 18px; margin-right: 8px"
               src="./content/images/kakao-talk.png"
               alt=""
             />
           </span>
-          <span>
+          <span (click)="openModal('whatsapp')">
             <img
               src="./content/images/whatsapp.png"
               width="80"
